--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ soundfile~=0.13.1
 numpy~=1.26.4
 joblib~=1.3.2
 webrtcvad~=2.0.10
-moviepy~=2.1.2
+ffmpeg-python~=0.2.0
 pandas~=2.2.3
 speechbrain~=1.0.3
 transformers~=4.51.3
+torch
+scipy
