--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Core libraries
 librosa~=0.11.0
 soundfile~=0.13.1
 numpy~=1.26.4
@@ -5,7 +6,45 @@ joblib~=1.3.2
 webrtcvad~=2.0.10
 ffmpeg-python~=0.2.0
 pandas~=2.2.3
-speechbrain~=1.0.3
+scipy~=1.12.0
+
+# Deep learning & transformers
+torch~=2.2.2
+torchvision~=0.17.2
+torchaudio~=2.2.2
 transformers~=4.51.3
-torch
-scipy
+speechbrain~=1.0.3
+huggingface-hub~=0.30.2
+
+# OCR
+easyocr~=1.7.2
+opencv-python~=4.11.0.86
+
+# Other utilities
+requests~=2.31.0
+tqdm~=4.67.1
+packaging~=23.2
+
+# Required by librosa
+numba~=0.61.2
+llvmlite~=0.44.0
+audioread~=3.0.1
+pooch~=1.8.2
+soxr~=0.5.0.post1
+
+# Others (basic Python packages)
+python-dateutil~=2.8.2
+six~=1.16.0
+certifi~=2025.4.26
+idna~=3.6
+urllib3~=2.2.1
+charset-normalizer~=3.3.2
+typing_extensions~=4.13.2
+threadpoolctl~=3.3.0
+decorator~=5.1.1
+filelock~=3.18.0
+safetensors~=0.5.3
+platformdirs~=4.2.0
+fsspec~=2025.3.2
+attrs~=23.2.0
+pycparser~=2.21
